config/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  selector:
    component: mongo
  ports:
    - protocol: TCP
      port: 27017
