config/mongoexpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress
spec:
  type: ClusterIP
  selector:
    component: mongoexpress
  ports:
    - protocol: TCP
      port: 8081
