config/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
spec:
  type: ClusterIP
  selector:
    component: nodejs
  ports:
    - protocol: TCP
      port: 3000
